fix collapsing lines in webkit
added min-width to bodyProfiltekst

--- a/css/iframe.css
+++ b/css/iframe.css
@@ -65,6 +65,7 @@ html, body {
 	padding:10px;
 	padding-right: 18px;
 	min-height: 100%;
+	min-width: 591px;
 	height: auto;
 	/*height: 100%;*/
 	/*width: 100% - 50px;*/
